@@ -442,6 +442,7 @@ exo_mount_point_list_configured
 exo_str_elide_underscores
 exo_str_is_equal
 exo_str_replace
+exo_strdup_strftime
 exo_strndupv
 exo_intern_string
 exo_intern_static_string
