@@ -47,6 +47,16 @@ Stable
 @Returns: 
 
 
+<!-- ##### FUNCTION exo_strdup_strftime ##### -->
+<para>
+
+</para>
+
+@format: 
+@tm: 
+@Returns: 
+
+
 <!-- ##### FUNCTION exo_strndupv ##### -->
 <para>
 
