@@ -291,10 +291,11 @@ exo_pango_layout_set_text_ellipsized
 /* exo-string functions */
 #if IN_HEADER(__EXO_STRING_H__)
 #if IN_SOURCE(__EXO_STRING_C__)
-exo_str_elide_underscores
+exo_str_elide_underscores G_GNUC_MALLOC G_GNUC_WARN_UNUSED_RESULT
 exo_str_is_equal
-exo_str_replace
-exo_strndupv
+exo_str_replace G_GNUC_MALLOC G_GNUC_WARN_UNUSED_RESULT
+exo_strdup_strftime G_GNUC_MALLOC G_GNUC_WARN_UNUSED_RESULT
+exo_strndupv G_GNUC_MALLOC G_GNUC_WARN_UNUSED_RESULT
 exo_intern_string
 exo_intern_static_string
 #endif
